# Oblivious-Remote-Attestation

./: README-Orc.md  README.md
Attestation-Agent-VF/: CMakeLists.txt  Dockerfile  NVChip  README.md  docker-compose.yml  main.cpp  orchestratorSigningKeyPublic  run.sh  vmSigningKeyPrivate
Attestation-Agent-VF/include/: handler.h  stdafx.h  timing.h  tpm.h  vm.h
Attestation-Agent-VF/src/: handler.cpp  tpm.cpp  vm.cpp
Attestation-Service-Orchestrator/: CMakeLists.txt  Dockerfile  NVChip  README.md  docker-compose.yml  main.cpp  orchestratorSigningKeyPrivate  run.sh  vmSigningKeyPublic
Attestation-Service-Orchestrator/include/: handler.h  orchestrator.h  stdafx.h
Attestation-Service-Orchestrator/src/: handler.cpp  orchestrator.cpp
